--- a/src/templates.simple/axpansion/server/Pages/Context/Units/Units.razor
+++ b/src/templates.simple/axpansion/server/Pages/Context/Units/Units.razor
@@ -5,7 +5,6 @@
 @using AXOpen.Core.Blazor.AxoAlertDialog;
 @using AXOpen.Base.Dialogs
 @using axosimple.BaseUnit
-@using axosimple.server.Units
 @inject IAlertService _alerts
 
 <div class="container">
@@ -13,7 +12,7 @@
         @foreach (var unit in ControlledUnits)
         {
             <div class="col">
-                <UnitLinkView Component="unit.unit.Component" Link="@unit.link" ImageLink="@unit.imageLink" />
+                <UnitLinkView Component="unit.unit" Link="@unit.link" ImageLink="@unit.imageLink" />
             </div>
         }
     </div>
@@ -36,7 +35,7 @@
         _alerts.AddAlertDialog(eAlertType.Info, Localizer["Mode change"], $"{Localizer[$"Requesting automatic mode of selected units"]}.", 1);
 
         var notGroundedStations = ControlledUnits.Where(p => p.unit.GroundStatus != eAxoTaskState.Done);
-        var ungroundedStationsList = string.Join(",", notGroundedStations.Select(p => p.unit.Component.Unit.AttributeName));
+        var ungroundedStationsList = string.Join(",", notGroundedStations.Select(p => p.unit.AttributeName));
 
         if (notGroundedStations.Count() > 0)
         {
@@ -78,7 +77,7 @@
         {
             var pp = string.Join(",\n", ControlledUnits
                 .Where(p => p.unit.GroundStatus != eAxoTaskState.Done)
-                .Select(p => p.unit.Component.Unit.AttributeName));
+                .Select(p => p.unit.AttributeName));
 
             _alerts.AddAlertDialog(eAlertType.Danger,
                 Localizer["Mode change"],
@@ -101,17 +100,17 @@
         this.StateHasChanged();
     }
 
-    private IEnumerable<(StandardUnit unit, string link, string imageLink)> ControlledUnits 
+    private IEnumerable<(UnitBase unit, string link, string imageLink)> ControlledUnits 
     {
         get 
         {
-            return new (StandardUnit, string, string)[]
+            return new (UnitBase, string, string)[]
             { 
                 // (new StandardUnit(Entry.Plc.Context.Cu1),"Context/Units/Cu1", "logo-header.svg"),
                 // (new StandardUnit(Entry.Plc.Context.Cu2),"Context/Units/Cu2", "logo-header.svg"),
 
-                (new StandardUnit(ContextService.Instance.UnitTemplateServices),"Context/Units/UnitTemplate", "logo-header.svg"),
-                (new StandardUnit(ContextService.Instance.StarterUnitTemplateServices),"Context/Units/StarterUnitTemplate", "logo-axopen-no-background.svg"),
+                (Entry.Plc.Context.UnitTemplate,"Context/Units/UnitTemplate", "logo-header.svg"),
+                (Entry.Plc.Context.StarterUnitTemplate,"Context/Units/StarterUnitTemplate", "logo-axopen-no-background.svg"),
             };
         }
     }
