--- a/src/templates.simple/axpansion/server/Components/Unit.razor
+++ b/src/templates.simple/axpansion/server/Components/Unit.razor
@@ -135,6 +135,6 @@
     </button>
 </div>
 
-<AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator LocatorPath="@this.Component.Symbol" ObservedObjects="@this.Component.UnitServices.Associates"></AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator>
-<AXOpen.Core.Blazor.Dialogs.AxoAlertLocator LocatorPath="@this.Component.Symbol" ObservedObjects="@this.Component.UnitServices.Associates"></AXOpen.Core.Blazor.Dialogs.AxoAlertLocator>
+<AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator LocatorPath="@this.Component.Symbol" ObservedObjects="new ITwinObject[] {this.Component}"></AXOpen.Core.Blazor.AxoDialogs.AxoDialogLocator>
+<AXOpen.Core.Blazor.Dialogs.AxoAlertLocator LocatorPath="@this.Component.Symbol" ObservedObjects="new ITwinObject[] {this.Component}"></AXOpen.Core.Blazor.Dialogs.AxoAlertLocator>
 
