Added control view for AxoBoolArray

--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoArrays/AxoArraysExamples.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoArrays/AxoArraysExamples.razor
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <RenderableContentControl Context="@Entry.Plc.AxoBoolArrayExampleContext.MyArray8" Presentation="Control" />
+                <RenderableContentControl Context="@Entry.Plc.AxoBoolArrayExampleContext.MyArray8" Presentation="Display" />
             </div>
             <div class="col">
                 <RenderableContentControl Context="@Entry.Plc.AxoBoolArrayExampleContext.MyArray16" Presentation="Control" />
