--- a/src/core/src/AXOpen.Core.Blazor/AxoArrays/AxoBoolArrayView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoArrays/AxoBoolArrayView.razor
@@ -26,7 +26,7 @@
                         </div>
                         <div>
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" @bind="item.Data" disabled>
+                                <input class="form-check-input" type="checkbox" @bind="item.Data" disabled="@IsDisabled">
                             </div>
                         </div>
                     </div>
