--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoArrays/AxoArraysExamples.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoArrays/AxoArraysExamples.razor
@@ -14,10 +14,13 @@
         </div>
         <div class="row">
             <div class="col">
-                <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray10" Presentation="Control" />
+                <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray10" Presentation="Display" />
             </div>
             <div class="col">
-                <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray20" Presentation="Control" />
+                <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray20" Presentation="Display" />
+            </div>
+            <div class="col">
+                <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray30" Presentation="Control" />
             </div>
         </div>
     </div>
