core-AxoByteArray instance with ReadOnly attribute shown as 'Display' view even if the 'Control' view is used

--- a/src/core/src/AXOpen.Core.Blazor/AxoArrays/AxoByteArrayView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoArrays/AxoByteArrayView.razor
@@ -8,7 +8,7 @@
     <div class="row ">
         <div class="col">
             @Component.AttributeName
-            @if (IsControllable)
+            @if (IsControllable & !IsReadOnly)
             {
                 <button class="btn btn-primary" type="button" @onclick="@Upload">
                     <span class="oi oi-data-transfer-upload" aria-hidden="true" />
