--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoArrays/AxoArraysExamples.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoArrays/AxoArraysExamples.razor
@@ -17,7 +17,7 @@
                 <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray10" Presentation="Display" />
             </div>
             <div class="col">
-                <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray20" Presentation="Display" />
+                <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray20" Presentation="Control" />
             </div>
             <div class="col">
                 <RenderableContentControl Context="@Entry.Plc.AxoByteArrayExampleContext.MyArray30" Presentation="Control" />
