--- a/src/templates.simple/axpansion/server/Shared/NavMenu.razor
+++ b/src/templates.simple/axpansion/server/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
             <nav class="flex-column">
                 <MenuItem Name="Home" Link="/" Icon="oi oi-home"/>
                 <ExpandableMenuItem Name="UI" Icon="oi oi-align-center">
-                    <MenuItem Name="Units" Link="/Context/Units/" Icon="oi oi-cog"/>
+                    <MenuItem Name="Units" Link="/Context/" Icon="oi oi-cog"/>
                     <MenuItem Name="I/O" Link="/Service/Io" Icon="oi oi-cog"/>
                     <MenuItem Name="Technology settings " Link="Settings/TechnologySettings" Icon="oi oi-cog"></MenuItem>
                     <MenuItem Name="Process settings" Link="Settings/ProcessSettings" Icon="oi oi-cog"></MenuItem>
