--- a/src/template.axolibrary/app/ix-blazor/Pages/Component_1.razor
+++ b/src/template.axolibrary/app/ix-blazor/Pages/Component_1.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Component_1"
 @using AXOpen.Core;
+@using Template.Axolibrary;
 
 <button class="btn btn-outline-primary" @onclick="WriteTaskTimesToConsole">Write times to console</button>
 
